[package]
name = "near-event-websocket-client"
version = "0.1.0"
authors = ["Kombi <cenwadike@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.4.0"
